--- a/Html5-Dom 3/Task3/style.css
+++ b/Html5-Dom 3/Task3/style.css
@@ -10,20 +10,81 @@
     display:flex;
     padding:10px;
     margin:10px auto;
+    box-shadow: inset 0 0 25px 18px #FFB176;
 }
 #mainwrapper>section{
     width:200px;
     padding:5px;
-    border:1px solid black;
     margin:5px;
+    border:1px solid black;
+    border-radius: 25px;
+    box-shadow: inset 0 0 25px 18px #FFB176;
+
 }
+
+.cards-group {
+    height: 92%;
+    padding: 5px;
+    margin: 20px;
+    border: 1px solid;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.card {
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    border: 3px solid blue;
+    border-radius: 10px;
+    background-color: transparent;
+    width: 85%;
+    cursor: pointer;
+    animation: cardAnimation 1s ease-in 0s 1 normal both;
+    transition: all 0.5s ease-in-out;
+}
+
 #videowrapper{
     flex-grow:1;
-    display:flex;
-    justify-content:center;
-    align-content:center;
+    display: flex;
+    padding: 50px !important;
+
 }
-#myvideo{
-    width:500px;
-    padding: 40px;
+#videowrapper div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+video {
+    width: 100%;
+    border-radius: 25px;
+    transition: transform 1s ease-in;
+}
+
+button.clicked {
+    background-color: steelblue;
+    color: white;
+}
+
+video:hover {
+    transform: scale(1.13);
+}
+
+#controlswrapper .cards-group:hover {
+    background-color: darkorange;
+}
+
+button.card:not(.clicked):hover {
+    background-color: white;
+}
+
+@keyframes cardAnimation {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
